--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,20 @@ dependencies = [
 [project.scripts]
 project = "labyrinth_game.main:main"
 
+[tool.ruff]
+line-length = 88
+target-version = "py311"
+exclude = ["venv", ".venv", "dist", "__pycache__"]
+
+[tool.ruff.lint]
+select = ["E", "F", "I"]
+ignore = []
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[dependency-groups]
+dev = [
+    "ruff (>=0.13.2,<0.14.0)"
+]
