Game without logic

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ dependencies = [
      { include = "labyrinth_game" },
  ]
 
-[project.scripts]
+[tool.poetry.scripts]
 project = "labyrinth_game.main:main"
 
 [tool.ruff]
